--- a/src/vnacal_new.3
+++ b/src/vnacal_new.3
@@ -182,7 +182,7 @@ VNACAL_TE10; 8-term T plus off-diagonal E11 leakage terms
 VNACAL_UE10; 8-term U plus off-diagonal E11 leakage terms
 VNACAL_T16;16-term T parameters
 VNACAL_U16;16-term U (inverse T) parameters
-.\" VNACAL_UE14;14-term columns x (rows x 1) U7 systems
+VNACAL_UE14;14-term columns x (rows x 1) U7 systems
 VNACAL_E12;12-term generalized classic SOLT
 .TE
 .in -4n
