--- a/src/vnaconv.3
+++ b/src/vnaconv.3
@@ -763,7 +763,7 @@ the system impedances.
 For example, \fBvnaconv_stozi\fP() finds the input impedances from a
 2x2 s-parameter matrix, while \fBvnaconv_ztozin\fP() finds the input
 impedances from an \fIn\fP by \fIn\fP z-parameter matrix.
-The \fIzi\fP and \fIz0\fP vectors must have length at least \fIn\fP.
+The \fIzi\fP and \fIz0\fP vectors must have length \fIn\fP.
 .PP
 The special-case function \fBvnaconv_stozimn\fP() finds the input
 impedances for the ports along the major diagonal of an m by n rectangular
