--- a/src/vnaerr.3
+++ b/src/vnaerr.3
@@ -144,5 +144,4 @@ returning failure from a library function.
 .\" .SH EXAMPLES
 .\"
 .SH "SEE ALSO"
-.BR vnacal "(3), " vnacal_new "(3), " vnaconv "(3), " vnadata "(3),"
-.BR vnacal_parameter "(3)"
+.BR vnacal "(3), " vnadata "(3)," vnacal_property "(3)"
